Translation update done using Pootle.

--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 09:43+0200\n"
+"PO-Revision-Date: 2010-06-01 09:44+0200\n"
 "Last-Translator:  <sven.erik.andersen@gmail.com>\n"
 "Language-Team: norwegian <no@li.org>\n"
 "Language: nb\n"
@@ -4738,7 +4738,6 @@ msgid "Displays a link to download this image."
 msgstr "Viser en link til dette bildet (m.a.o. direkte blob-nedlasting)."
 
 #: libraries/transformations/text_plain__dateformat.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
 #| "formatted date. The first option is the offset (in hours) which will be "
@@ -4758,7 +4757,7 @@ msgid ""
 "documentation for PHP's strftime() function and for \"utc\" it is done using "
 "gmdate() function."
 msgstr ""
-"Vi en TIME, TIMESTAMP, DATETIME eller et numerisk Unix tidsmerke som en "
+"Vis en TIME, TIMESTAMP, DATETIME eller et numerisk Unix tidsmerke som en "
 "formatert dato. Den første innstillingen er differansen (i timer) som vil "
 "bli lagt til tidsmerket (Standard: 0). Bruk den andre innstillingen til å "
 "spesifiser en alternativ datoformatstreng. Den tredje innstillingen avgjør "
