Translation update done using Pootle.

--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 09:44+0200\n"
+"PO-Revision-Date: 2010-06-01 09:45+0200\n"
 "Last-Translator:  <sven.erik.andersen@gmail.com>\n"
 "Language-Team: norwegian <no@li.org>\n"
 "Language: nb\n"
@@ -4767,7 +4767,6 @@ msgstr ""
 "\"utc\" se gmdate() funksjonen."
 
 #: libraries/transformations/text_plain__external.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "LINUX ONLY: Launches an external application and feeds it the field data "
 #| "via standard input. Returns the standard output of the application. The "
@@ -4791,16 +4790,16 @@ msgid ""
 "will prevent wrapping and ensure that the output appears all on one line "
 "(Default 1)."
 msgstr ""
-"BARE LINUX: Starter et eksternt program og gir den feltdataene via standard "
-"input. Returnerer standart output fra programmet. Standard er Tidy, for å "
-"skrive ut pen HTML kode. Av sikkerhetsgrunner så må du redigere fila "
+"BARE LINUX: Starter et eksternt program og gir den kolonnedataene via "
+"standard input. Returnerer standard output fra programmet. Standard er Tidy, "
+"for å skrive ut pen HTML kode. Av sikkerhetsgrunner så må du redigere fila "
 "libraries/transformations/text_plain__external.inc.php og skrive inn de "
 "verktøyene du tillater å kjøres. Den første verdien er antall programmer du "
 "ønsker å bruke og den andre verdien er parameterene for programmet. Den "
 "tredje verdien, hvis den er satt til 1 vil konvertere utskriften med "
 "htmlspecialchars() (Standard er 1). En fjerde verdi vil, viss satt til 1 "
 "sette en NOWRAP i innholdscellen slik at hele resultatet blir vist uten "
-"reformatering (Standard er 1)"
+"reformatering (Standard er 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
 #, fuzzy
