--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 09:46+0200\n"
+"PO-Revision-Date: 2010-06-01 09:47+0200\n"
 "Last-Translator:  <sven.erik.andersen@gmail.com>\n"
 "Language-Team: norwegian <no@li.org>\n"
 "Language: nb\n"
@@ -4813,7 +4813,6 @@ msgstr ""
 "htmlspecialchars(). Kolonnen blir betraktet som å inneholde gyldig HTML."
 
 #: libraries/transformations/text_plain__imagelink.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays an image and a link; the field contains the filename. The first "
 #| "option is a URL prefix like \"http://www.example.com/\". The second and "
@@ -4823,9 +4822,9 @@ msgid ""
 "option is a URL prefix like \"http://www.example.com/\". The second and "
 "third options are the width and the height in pixels."
 msgstr ""
-"Viser et bilde og en link, feltet inneholder filnavnet; første verdi er et "
-"prefiks slik som \"http://domain.com/\", andre verdien er bredden i piksler, "
-"tredje er høyden."
+"Viser et bilde og en link, kolonnen inneholder filnavnet; første verdi er et "
+"prefiks slik som \"http://www.example.com/\", andre verdien er bredden i "
+"piksler, tredje er høyden."
 
 #: libraries/transformations/text_plain__link.inc.php:10
 #, fuzzy
