--- a/po/nb.po
+++ b/po/nb.po
@@ -4827,7 +4827,6 @@ msgstr ""
 "piksler, tredje er høyden."
 
 #: libraries/transformations/text_plain__link.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a link; the field contains the filename. The first option is a "
 #| "URL prefix like \"http://www.example.com/\". The second option is a title "
@@ -4837,8 +4836,8 @@ msgid ""
 "prefix like \"http://www.example.com/\". The second option is a title for "
 "the link."
 msgstr ""
-"Viser en link, feltet inneholder filnavnet, ; første verdi er et prefiks "
-"slik som \"http://domain.com/\", andre verdien er en tittel for linken."
+"Viser en link, kolonnen inneholder filnavnet, ; første verdi er et prefiks "
+"slik som \"http://www.example.com/\", andre verdien er en tittel for linken."
 
 #: libraries/transformations/text_plain__longToIpv4.inc.php:10
 msgid ""
