Translation update done using Pootle.

--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 09:47+0200\n"
+"PO-Revision-Date: 2010-06-01 09:48+0200\n"
 "Last-Translator:  <sven.erik.andersen@gmail.com>\n"
 "Language-Team: norwegian <no@li.org>\n"
 "Language: nb\n"
@@ -5193,7 +5193,6 @@ msgid "To select relation, click :"
 msgstr "For å velge relasjon, klikk :"
 
 #: pmd_help.php:29
-#, fuzzy
 #| msgid ""
 #| "The display field is shown in pink. To set/unset a field as the display "
 #| "field, click the \"Choose field to display\" icon, then click on the "
@@ -5203,9 +5202,9 @@ msgid ""
 "column, click the \"Choose column to display\" icon, then click on the "
 "appropriate column name."
 msgstr ""
-"Visningsfeltet er markert i rosa. For å slå på/av et felt som visningsfelt, "
-"klikk på \"Velg felt for visning\" ikonet, klikk så på det aktuelle "
-"feltnavnet."
+"Visningskolonnen er markert i rosa. For å slå på/av et felt som "
+"visningskolonne, klikk på \"Velg kolonne for visning\" ikonet, klikk så på det "
+"aktuelle kolonnenavnet."
 
 #: pmd_pdf.php:63
 msgid "Page has been created"
