--- a/po/fr.po
+++ b/po/fr.po
@@ -1997,10 +1997,9 @@ msgid "No Privileges"
 msgstr "aucun privilège"
 
 #: libraries/display_create_table.lib.php:41
-#, fuzzy
 #| msgid "Table must have at least one field."
 msgid "Table must have at least one column."
-msgstr "La table doit comporter au moins un champ"
+msgstr "La table doit comporter au moins une colonne"
 
 #: libraries/display_create_table.lib.php:48
 #, php-format
