--- a/po/fr.po
+++ b/po/fr.po
@@ -2730,10 +2730,9 @@ msgstr "Colonnes terminées par"
 
 #: libraries/export/csv.php:22 libraries/import/csv.php:28
 #: libraries/import/csv.php:71 libraries/import/ldi.php:41
-#, fuzzy
 #| msgid "Fields enclosed by"
 msgid "Columns enclosed by"
-msgstr "Champs entourés par"
+msgstr "Colonnes entourées par"
 
 #: libraries/export/csv.php:23 libraries/import/csv.php:29
 #: libraries/import/csv.php:75 libraries/import/ldi.php:42
