--- a/po/fr.po
+++ b/po/fr.po
@@ -2736,10 +2736,9 @@ msgstr "Colonnes entourées par"
 
 #: libraries/export/csv.php:23 libraries/import/csv.php:29
 #: libraries/import/csv.php:75 libraries/import/ldi.php:42
-#, fuzzy
 #| msgid "Fields escaped by"
 msgid "Columns escaped by"
-msgstr "Caractère spécial"
+msgstr "Caractère d'échappement"
 
 #: libraries/export/csv.php:24 libraries/import/csv.php:30
 #: libraries/import/csv.php:79 libraries/import/ldi.php:43
