Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -2763,10 +2763,9 @@ msgstr "Enlève les caractères de fin de ligne à l'intérieur des colonnes"
 #: libraries/export/ods.php:24 libraries/export/odt.php:50
 #: libraries/export/texytext.php:34 libraries/export/xls.php:24
 #: libraries/export/xlsx.php:24
-#, fuzzy
 #| msgid "Put fields names in the first row"
 msgid "Put columns names in the first row"
-msgstr "Afficher les noms de champ en première ligne"
+msgstr "Afficher les noms de colonnes en première ligne"
 
 #: libraries/export/excel.php:18
 msgid "CSV for MS Excel"
