--- a/po/fr.po
+++ b/po/fr.po
@@ -4538,10 +4538,9 @@ msgid "Run SQL query/queries on database %s"
 msgstr "Exécuter une ou des <b>requêtes</b> sur la base %s"
 
 #: libraries/sql_query_form.lib.php:317
-#, fuzzy
 #| msgid "Column names"
 msgid "Columns"
-msgstr "Nom des colonnes"
+msgstr "Colonnes"
 
 #: libraries/sql_query_form.lib.php:352 sql.php:665 sql.php:666 sql.php:683
 msgid "Bookmark this SQL query"
