--- a/po/fr.po
+++ b/po/fr.po
@@ -4656,7 +4656,6 @@ msgid "Length/Values"
 msgstr "Taille/Valeurs*"
 
 #: libraries/tbl_properties.inc.php:105
-#, fuzzy
 #| msgid ""
 #| "If field type is \"enum\" or \"set\", please enter the values using this "
 #| "format: 'a','b','c'...<br />If you ever need to put a backslash (\"\\\") "
@@ -4668,8 +4667,8 @@ msgid ""
 "a single quote (\"'\") amongst those values, precede it with a backslash "
 "(for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Les différentes valeurs des champs de type enum/set sont à spécifier sous la "
-"forme 'a','b','c'...<br />Pour utiliser un antislash(\"\\\") ou une "
+"Les différentes valeurs des colonnes de type enum/set sont à spécifier sous "
+"la forme 'a','b','c'...<br />Pour utiliser un antislash(\"\\\") ou une "
 "apostrophe (\"'\") dans l'une de ces valeurs, faites-le précéder d'un "
 "antislash (par exemple '\\\\xyz' ou 'a\\'b')."
 
