--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 16:19+0200\n"
+"PO-Revision-Date: 2010-06-01 16:20+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -4799,7 +4799,6 @@ msgid "Displays a link to download this image."
 msgstr "Affiche un lien vers cette image"
 
 #: libraries/transformations/text_plain__dateformat.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
 #| "formatted date. The first option is the offset (in hours) which will be "
@@ -4819,13 +4818,13 @@ msgid ""
 "documentation for PHP's strftime() function and for \"utc\" it is done using "
 "gmdate() function."
 msgstr ""
-"Affiche un champ TIME, TIMESTAMP, DATETIME ou un champ numérique contenant "
-"une valeur TIMESTAMP UNIX en tant que date formatée. La première option est "
-"le décalage (en heures) à ajouter (par défaut, 0). La seconde option sert à "
-"indiquer le format de date ou d'heure. La troisième option détermine si vous "
-"voulez la date locale («local») ou UTC («utc»). Pour le format «local», le "
-"second paramètre utilise le format de la fonction PHP strftime() et pour le "
-"format «utc», il utilise la fonction gmdate()."
+"Affiche une colonne TIME, TIMESTAMP, DATETIME ou une colonne numérique "
+"contenant une valeur TIMESTAMP UNIX en tant que date formatée. La première "
+"option est le décalage (en heures) à ajouter (par défaut, 0). La seconde "
+"option sert à indiquer le format de date ou d'heure. La troisième option "
+"détermine si vous voulez la date locale («local») ou UTC («utc»). Pour le "
+"format «local», le second paramètre utilise le format de la fonction PHP "
+"strftime() et pour le format «utc», il utilise la fonction gmdate()."
 
 #: libraries/transformations/text_plain__external.inc.php:10
 #, fuzzy
