--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 16:20+0200\n"
+"PO-Revision-Date: 2010-06-01 16:21+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -4827,7 +4827,6 @@ msgstr ""
 "strftime() et pour le format «utc», il utilise la fonction gmdate()."
 
 #: libraries/transformations/text_plain__external.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "LINUX ONLY: Launches an external application and feeds it the field data "
 #| "via standard input. Returns the standard output of the application. The "
@@ -4851,16 +4850,17 @@ msgid ""
 "will prevent wrapping and ensure that the output appears all on one line "
 "(Default 1)."
 msgstr ""
-"(Linux seulement) Exécute un programme externe et lui envoie le contenu du "
-"champ via l'entrée standard. Puis capture la sortie standard de ce programme "
-"externe. Le programme par défaut est tidy, pour un affichage embelli du code "
-"HTML. Pour des raisons de sécurité, vous devez éditer le script libraries/"
-"transformations/text_plain__external.inc.php et y insérer les noms de "
-"programme externe possibles. La première option est le numéro du programme "
-"que vous voulez utiliser, la seconde option contient les paramètres pour ce "
-"programme. En troisième option, une valeur de 1 va convertir le résultat "
-"avec la fonction htmlspecialchars() (par défaut, 1). En option 4, une valeur "
-"de 1 va ajouter NOWRAP à la cellule affichée (par défaut, 1)."
+"(Linux seulement) Exécute un programme externe et lui envoie le contenu de "
+"la colonne via l'entrée standard. Puis capture la sortie standard de ce "
+"programme externe. Le programme par défaut est Tidy, pour un affichage "
+"embelli du code HTML. Pour des raisons de sécurité, vous devez éditer le "
+"script libraries/transformations/text_plain__external.inc.php et y insérer "
+"les noms de programme externe possibles. La première option est le numéro du "
+"programme que vous voulez utiliser, la seconde option contient les "
+"paramètres pour ce programme. En troisième option, une valeur de 1 va "
+"convertir le résultat avec la fonction htmlspecialchars() (par défaut, 1). "
+"En option 4, une valeur de 1 va ajouter NOWRAP à la cellule affichée (par "
+"défaut, 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
 #, fuzzy
