--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 16:21+0200\n"
+"PO-Revision-Date: 2010-06-01 16:22+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -4875,7 +4875,6 @@ msgstr ""
 "colonne contient du HTML valide."
 
 #: libraries/transformations/text_plain__imagelink.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays an image and a link; the field contains the filename. The first "
 #| "option is a URL prefix like \"http://www.example.com/\". The second and "
@@ -4885,7 +4884,7 @@ msgid ""
 "option is a URL prefix like \"http://www.example.com/\". The second and "
 "third options are the width and the height in pixels."
 msgstr ""
-"Affiche une image et un lien, le champ contient le nom du fichier. La "
+"Affiche une image et un lien, la colonne contient le nom du fichier. La "
 "première option est un préfixe URL tel que «http://www.example.com/». La "
 "seconde option est la largeur en pixels et la troisième option est la "
 "hauteur en pixels."
