--- a/po/fr.po
+++ b/po/fr.po
@@ -4890,7 +4890,6 @@ msgstr ""
 "hauteur en pixels."
 
 #: libraries/transformations/text_plain__link.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a link; the field contains the filename. The first option is a "
 #| "URL prefix like \"http://www.example.com/\". The second option is a title "
@@ -4900,9 +4899,9 @@ msgid ""
 "prefix like \"http://www.example.com/\". The second option is a title for "
 "the link."
 msgstr ""
-"Affiche un lien, le champ contient le nom du fichier; en première option, un "
-"préfixe comme «http://www.example.com/», en seconde option, un titre pour le "
-"lien."
+"Affiche un lien, la colonne contient le nom du fichier; en première option, "
+"un préfixe comme «http://www.example.com/», en seconde option, un titre pour "
+"le lien."
 
 #: libraries/transformations/text_plain__longToIpv4.inc.php:10
 msgid ""
