--- a/po/fr.po
+++ b/po/fr.po
@@ -5126,10 +5126,9 @@ msgid "Create a page"
 msgstr "Créer une page"
 
 #: pdf_pages.php:310
-#, fuzzy
 #| msgid "Page number:"
 msgid "Page name"
-msgstr "Page n°:"
+msgstr "Nom de la page"
 
 #: pdf_pages.php:314
 #, fuzzy
