Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 16:22+0200\n"
+"PO-Revision-Date: 2010-06-01 16:23+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -5260,7 +5260,6 @@ msgid "To select relation, click :"
 msgstr "Pour sélectionner un lien, cliquez :"
 
 #: pmd_help.php:29
-#, fuzzy
 #| msgid ""
 #| "The display field is shown in pink. To set/unset a field as the display "
 #| "field, click the \"Choose field to display\" icon, then click on the "
@@ -5270,9 +5269,9 @@ msgid ""
 "column, click the \"Choose column to display\" icon, then click on the "
 "appropriate column name."
 msgstr ""
-"Le champ à afficher est montré en rose. Pour indiquer qu'un champ est ou "
-"n'est plus le champ à afficher, cliquer l'icône  «Champ à afficher», puis "
-"cliquer sur le nom de champ approprié."
+"La colonne descriptive est montrée en rose. Pour indiquer qu'une colonne est "
+"ou n'est plus la colonne descriptive, cliquer l'icône  «Colonne "
+"descriptive», puis cliquer sur le nom de colonne approprié."
 
 #: pmd_pdf.php:63
 msgid "Page has been created"
