--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 16:24+0200\n"
+"PO-Revision-Date: 2010-06-01 16:25+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -7624,7 +7624,6 @@ msgid "PDF schema: table coordinates"
 msgstr "Table pour coordonnées du schéma en PDF"
 
 #: setup/lib/messages.inc.php:320
-#, fuzzy
 #| msgid ""
 #| "Table to describe the display fields, leave blank for no support; "
 #| "suggested: [kbd]pma_table_info[/kbd]"
@@ -7632,7 +7631,7 @@ msgid ""
 "Table to describe the display columns, leave blank for no support; "
 "suggested: [kbd]pma_table_info[/kbd]"
 msgstr ""
-"Sert à définir les champs descriptifs, laisser vide pour désactiver; "
+"Sert à définir les colonnes descriptives, laisser vide pour désactiver; "
 "suggéré : [kbd]pma_table_info[/kbd]"
 
 #: setup/lib/messages.inc.php:321
