--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-01 16:25+0200\n"
+"PO-Revision-Date: 2010-06-01 16:26+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -7668,11 +7668,10 @@ msgid "Verbose name of this server"
 msgstr "Nom à afficher pour ce serveur"
 
 #: setup/lib/messages.inc.php:329
-#, fuzzy
 #| msgid ""
 #| "Whether a user should be displayed a &quot;show all (records)&quot; button"
 msgid "Whether a user should be displayed a &quot;show all (rows)&quot; button"
-msgstr "...via le bouton Tout afficher"
+msgstr "Devrait-on afficher un bouton &quot;Tout afficher&quot;"
 
 #: setup/lib/messages.inc.php:330
 msgid "Allow to display all the rows"
