--- a/po/fr.po
+++ b/po/fr.po
@@ -8306,10 +8306,9 @@ msgid "Propose table structure"
 msgstr "Suggérer des optimisations quant à la structure de la table"
 
 #: tbl_structure.php:540
-#, fuzzy
 #| msgid "Add new field"
 msgid "Add field"
-msgstr "Ajouter un champ"
+msgstr "Ajouter une colonne"
 
 #: tbl_structure.php:554
 msgid "At End of Table"
