--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + [lang] Updated lot of translation based on work done in master branch.
 - bug #3008411 [databases] Last dropped database remains active in navi
 - bug #2986383 [parser] Not all data being shown / counted
+- bug [synchronize] Rows were deleted in target table regardless of the
+  "Would you like to delete..." option
 
 3.3.3.0 (2010-05-10)
 - patch #2982480 [navi] Do not group if there would be one table in group,
