--- a/po/sl.po
+++ b/po/sl.po
@@ -7819,10 +7819,9 @@ msgid "Ignore"
 msgstr "Prezri"
 
 #: tbl_change.php:728
-#, fuzzy
 #| msgid " Because of its length,<br /> this field might not be editable "
 msgid " Because of its length,<br /> this column might not be editable "
-msgstr " Zaradi njegove dolžine<br /> polja morda ne bo mogoče urejati "
+msgstr " Zaradi njegove dolžine<br /> stolpca morda ne bo mogoče urejati "
 
 #: tbl_change.php:888
 msgid "Remove BLOB Repository Reference"
