Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-03 03:41+0200\n"
+"PO-Revision-Date: 2010-06-03 03:44+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -4613,7 +4613,6 @@ msgstr ""
 "档)所到的结果是不一样的。"
 
 #: libraries/transformations/text_plain__external.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "LINUX ONLY: Launches an external application and feeds it the field data "
 #| "via standard input. Returns the standard output of the application. The "
@@ -4637,12 +4636,10 @@ msgid ""
 "will prevent wrapping and ensure that the output appears all on one line "
 "(Default 1)."
 msgstr ""
-"仅 LINUX：调用外部程序并通过标准输入填充字段数据。返回此应用程序的标准输出。"
-"默认为 Tidy，可以很好的打印 HTML 代码。为了安全起见，您需要手动编辑文件 "
-"libraries/transformations/text_plain__external.inc.php 然后插入允许您运行的工"
-"具。第一个选项是您想要使用的程序编号，而第二个选项是程序的参数。第三个参数如"
-"果设为 1 的话将会用 htmlspecialchars() 转换其输出 (默认为 1)。第四个参数如果"
-"设为 1 的话，将禁止换行，确保所有内容显示在一行中 (默认为 1)"
+"仅 LINUX：调用外部程序并通过标准输入传入字段数据。返回此应用程序的标准输出。默认为 Tidy，可以很好的打印 HTML "
+"代码。为了安全起见，您需要手动编辑 libraries/transformations/text_plain__external.inc.php "
+"文件来加入可以运行的工具。第一个选项是您想要使用的程序编号，第二个选项是程序的参数。第三个参数如果设为 1 的话将会用 "
+"htmlspecialchars() 处理输出 (默认为 1)。第四个参数如果设为 1 的话，将禁止换行，确保所有内容显示在一行中 (默认为 1)。"
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
 #| msgid ""
